data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1589.wast
;; 10. **Test Description**:     - Design a loop with a `br_if` targeting another loop’s block based on parameter types, ensuring loop input types are appropriately managed.    - **Constraint Checking**: Verifies understanding and management of loop parameters versus block results.    - **Infinite Loop Relation**: Ensures that improper handling of loop parameters doesn’t force infinite loops, confirming differentiation between `LOOP` and other blocks in `wizard_engine`.

(assert_invalid
  (module
    (func $loop-nested-br_if
      (block $outer
        (loop $inner
          (block
            (i32.const 1) (i32.const 1)
            (br_if 1 (i32.const 1))
          )
        )
      )
    )
  )
  "type mismatch"
)